Fix SockerPermission error